--- a/neeza-server/neeza-server-standalone/src/main/resources/templates/index.html
+++ b/neeza-server/neeza-server-standalone/src/main/resources/templates/index.html
@@ -8,20 +8,32 @@
 </head>
 <body>
 <head>
+
+</head>
+
+<!--左栏 宽占比1/5-->
+<div>
+
     <div class="dropdown">
         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          Dropdown
-          <span class="caret"></span>
+            Dropdown
+            <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li role="separator" class="divider"></li>
-          <li><a href="#">Separated link</a></li>
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
         </ul>
-      </div>
-</head>
+    </div>
+
+    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+</div>
+<!--右栏  宽占比4/5-->
+<div>
+
+</div>
 
 
 
