--- a/neeza-server/neeza-server-standalone/src/main/resources/templates/index.html
+++ b/neeza-server/neeza-server-standalone/src/main/resources/templates/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height: 100%;">
+
 <head>
     <meta charset="UTF-8">
     <title>Neeza</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+    <style type="text/css">
+        html,
+        body {
+            height: 100%;
+        }
+
+        .neezaIndex {
+            height: 100%;
+        }
+    </style>
 </head>
-<body>
-<head>
 
-</head>
+<body style="height: 100%;">
 
-<!--左栏 宽占比1/5-->
-<div>
+    <head>
 
-    <div class="dropdown">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Dropdown
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-        </ul>
+    </head>
+
+    <div class="row neezaIndex" style="margin-top: 3px;">
+        <div class="col-md-4 neezaIndex" style="background-color: bisque;">
+            <select class="form-control">
+                <option>1</option>
+                <option>2</option>
+                <option>3</option>
+                <option>4</option>
+                <option>5</option>
+            </select>
+
+
+
+            <input type="input" style="margin-top: 2px;" class="form-control" placeholder="searching service name">
+
+        
+            <div  class="row " style="background-color: blueviolet;">
+                <div class="row"  style="height: 70%;width: 100%;background-color: black;">
+                        11111111111
+                </div>
+                <div class="row mt-3" style="height: 30%;width: 100%;background-color: red;">
+                    
+                </div>
+            </div>
+
+            
+
+
+
+
+        </div>
+
+
+        <div class="col-md-8 neezaIndex" style="background-color: rgb(252, 145, 73);">.col-md-4</div>
     </div>
 
-    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
-</div>
-<!--右栏  宽占比4/5-->
-<div>
-
-</div>
 
 
-
-<script src="../static/js/jquery-3.5.1.min.js"></script>
-<script src="../static/js/bootstrap.min.js"></script>
+    <script src="../static/js/jquery-3.5.1.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
 </body>
+
 </html>
